# AiGameCompanion

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/injector/: Cargo.toml
crates/injector/src/: main.rs
crates/launcher/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
crates/launcher/src/: App.svelte  app.css  main.ts
crates/launcher/src-tauri/: Cargo.toml  tauri.conf.json
crates/launcher/src-tauri/capabilities/: default.json  overlay.json
crates/launcher/src-tauri/icons/: icon.icns
crates/launcher/src-tauri/src/: ai.rs  main.rs  models.rs  overlay.rs  overlay_capture.rs  process_watch.rs  proxy.rs  secrets.rs  state.rs
crates/launcher/src-tauri/src/ai/: cli.rs  gemini.rs  mod.rs
crates/launcher/src-tauri/src/commands/: ai.rs  games.rs  mod.rs  settings.rs
crates/launcher/src-tauri/src/discovery/: steam.rs
crates/launcher/src/lib/components/: Background.svelte  DetailPanel.svelte  GameList.svelte  GameListItem.svelte  Overlay.svelte  SettingsModal.svelte  StatusBar.svelte  TopBar.svelte
crates/launcher/src/lib/stores/: accent.svelte.ts  companion.svelte.ts  games.svelte.ts
crates/launcher/src/lib/utils/: accent.ts  format.ts
crates/overlay/: Cargo.toml
crates/overlay/src/: api.rs  capture.rs  config.rs  game_detect.rs  lib.rs  logging.rs  provider.rs  proxy_client.rs  state.rs  translation.rs  ui.rs
scripts/: README.md  build.sh  ci-check.sh
