[workspace]
members = ["crates/overlay", "crates/injector", "crates/launcher/src-tauri"]
default-members = ["crates/overlay", "crates/injector"]
exclude = ["vendor/hudhook"]
resolver = "2"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[patch.crates-io]
hudhook = { path = "vendor/hudhook" }
