[package]
name = "injector"
version = "0.2.0"
edition = "2021"

[dependencies]
hudhook = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
windows = { version = "0.54", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }
