[package]
name = "launcher"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
