[package]
name = "launcher"
version = "1.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "net", "process", "io-util", "macros"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
axum = { version = "0.8", features = ["json"] }
rand = "0.10"
futures-util = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
