[package]
name = "launcher"
version = "2.0.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "net", "process", "io-util", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
png = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
toml = "1.0"
base64 = "0.22"

# Win32 foreground-window detection + focus handoff (overlay companion). Only
# compiled for Windows targets; the launcher's pure-logic tests run on Linux.
[target.'cfg(windows)'.dependencies]
# OS secret storage (Credential Manager) for the Gemini API key. Windows-only so
# the Linux test build does not pull the secret-service (dbus) backend.
keyring = { version = "3", features = ["windows-native"] }
windows = { version = "0.54", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
